feat: 为主题系统功能加上单元测试

--- a/src/styles/themes/default-theme.scss
+++ b/src/styles/themes/default-theme.scss
@@ -3,9 +3,11 @@ html[data-theme='default']:root {
   --pa-background-color: #f4f5fa;
   --pa-layer-color: #ffffff;
   --pa-text-color: #544f5a;
+  --pa-primary-color: #ba94d1;
 
   // dark mode
   --pa-dark-background-color: #28243d;
   --pa-dark-layer-color: #312d4b;
   --pa-dark-text-color: #cecce5;
+  --pa-dark-primary-color: #7f669d;
 }
