--- a/src/styles/themes/index.scss
+++ b/src/styles/themes/index.scss
@@ -1,11 +1,14 @@
 @use 'default-theme';
+@use 'primary';
 
 @layer base {
+  // ====================== background ======================
   body {
-    // background
     @apply bg-[--pa-background-color] dark:bg-[--pa-dark-background-color];
+  }
 
-    // text
-    @apply text-[--pa-text-color] dark:text-[--pa-dark-text-color];
+  // ====================== text ======================
+  :is(p, h1, h2, h3, h4, h5, h6, span, button, a) {
+    @apply use-text-color;
   }
 }
